--- a/Proyecto3/styles.css
+++ b/Proyecto3/styles.css
@@ -11,11 +11,12 @@ body {
 }
 
 /* Style the header */
-h1 {
+h1, h2 {
     background-color: #751cba;
     color: white;
     text-align: center;
-    padding: 20px 0;
+    padding: 20px;
+    
 }
 
 /* Style the menu options */
